--- a/vyne-parent/schema-store/pom.xml
+++ b/vyne-parent/schema-store/pom.xml
@@ -3,23 +3,23 @@
    <parent>
       <artifactId>vyne-parent</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.1.3</version>
+      <version>0.1.4-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>schema-store</artifactId>
-   <version>0.1.3</version>
+   <version>0.1.4-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-api</artifactId>
-         <version>0.1.3</version>
+         <version>0.1.4-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
-         <version>0.1.3</version>
+         <version>0.1.4-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
