--- a/vyne-parent/vyne-query-service/src/main/web/package.json
+++ b/vyne-parent/vyne-query-service/src/main/web/package.json
@@ -26,6 +26,7 @@
     "@covalent/dynamic-forms": "^2.0.0-beta.2",
     "@covalent/highlight": "^1.0.1",
     "@swimlane/ngx-graph": "^5.1.0",
+    "angular2-moment": "^1.9.0",
     "core-js": "^2.5.4",
     "mermaid": "^8.0.0-rc.8",
     "rxjs": "^6.0.0",
