--- a/vyne-parent/pom.xml
+++ b/vyne-parent/pom.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>platform</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.1.4-SNAPSHOT</version>
+      <version>0.1.4</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>vyne-parent</artifactId>
 
-   <version>0.1.4-SNAPSHOT</version>
+   <version>0.1.4</version>
    <packaging>pom</packaging>
 
    <properties>
