--- a/file-schema-server/pom.xml
+++ b/file-schema-server/pom.xml
@@ -13,6 +13,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>lang.taxi</groupId>
+         <artifactId>package-importer</artifactId>
+         <version>${taxi.version}</version>
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>utils</artifactId>
          <version>0.3.0-SNAPSHOT</version>
