--- a/schema-store-client/pom.xml
+++ b/schema-store-client/pom.xml
@@ -14,6 +14,11 @@
    <dependencies>
       <dependency>
          <groupId>io.vyne</groupId>
+         <artifactId>vyne-core-types</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
          <artifactId>events-api</artifactId>
          <version>0.3.0-SNAPSHOT</version>
       </dependency>
