--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -29,6 +29,7 @@
     "@covalent/core": "^2.0.1",
     "@covalent/dynamic-forms": "^2.0.1",
     "@covalent/highlight": "^2.1.1",
+    "@materia-ui/ngx-monaco-editor": "^2.0.7",
     "@ng-select/ng-select": "^2.20.5",
     "@swimlane/ngx-graph": "^5.5.0",
     "class-transformer": "^0.2.0",
@@ -36,10 +37,13 @@
     "highlight.js": "^9.17.1",
     "http-status-codes": "^1.3.0",
     "immutable": "^3.8.2",
+    "install": "^0.13.0",
     "mermaid": "^8.0.0-rc.8",
     "moment": "^2.24.0",
+    "monaco-editor": "^0.15.6",
     "ngx-highlightjs": "^4.0.0",
     "ngx-moment": "^3.4.0",
+    "npm": "^6.14.5",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "react": "^16.12.0",
