--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,18 @@
-version: 3.8
+version: "3.8"
 services:
    vyne:
       image: vyneco/vyne
+      ports:
+         - 5701-5721
+         - 9022:9022
       environment:
          PROFILE: embedded-discovery
 
    file-schema-server:
       image: vyneco/file-schema-server
+      ports:
+         - 5701-5721
       volumes:
-      -  ./schemas:/var/lib/postgresql/data
+         - ./schemas:/var/lib/postgresql/data
       environment:
          OPTIONS: --Dtaxi.project-home=/var/lib/vyne/schemas
