--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
    vyne:
-      image: vyneco/vyne
+      image: vyneco/vyne:latest-snapshot
       ports:
          - 5701-5721
          - 9022:9022
@@ -9,7 +9,7 @@ services:
          PROFILE: embedded-discovery
 
    file-schema-server:
-      image: vyneco/file-schema-server
+      image: vyneco/file-schema-server:latest-snapshot
       ports:
          - 5701-5721
       volumes:
