--- a/pipelines/pipeline-runner/pom.xml
+++ b/pipelines/pipeline-runner/pom.xml
@@ -26,6 +26,10 @@
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       </dependency>
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-webflux</artifactId>
+      </dependency>
 
       <dependency>
          <groupId>io.vyne</groupId>
@@ -89,12 +93,12 @@
          <classifier>test</classifier>
          <scope>test</scope>
       </dependency>
-<!--      <dependency>-->
-<!--         <groupId>org.springframework.kafka</groupId>-->
-<!--         <artifactId>spring-kafka-test</artifactId>-->
-<!--         <scope>test</scope>-->
-<!--         <version>2.2.12.RELEASE</version>-->
-<!--      </dependency>-->
+      <!--      <dependency>-->
+      <!--         <groupId>org.springframework.kafka</groupId>-->
+      <!--         <artifactId>spring-kafka-test</artifactId>-->
+      <!--         <scope>test</scope>-->
+      <!--         <version>2.2.12.RELEASE</version>-->
+      <!--      </dependency>-->
 
    </dependencies>
    <dependencyManagement>
@@ -109,5 +113,20 @@
    </dependencyManagement>
 
    <build>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>test-jar</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+      </plugins>
+
    </build>
 </project>
