--- a/pipelines/pipeline-runner-cacib-app/pom.xml
+++ b/pipelines/pipeline-runner-cacib-app/pom.xml
@@ -11,12 +11,57 @@
 
    <artifactId>pipeline-runner-cacib-app</artifactId>
 
+   <properties>
+      <avro.version>1.8.2</avro.version>
+   </properties>
+
+
    <dependencies>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>pipeline-runner</artifactId>
          <version>0.3.0-SNAPSHOT</version>
       </dependency>
+
+      <dependency>
+         <groupId>org.springframework.kafka</groupId>
+         <artifactId>spring-kafka-test</artifactId>
+         <version>2.2.1.RELEASE</version>
+      </dependency>
+
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>pipeline-runner</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
+         <type>test-jar</type>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
+         <type>test-jar</type>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>org.apache.avro</groupId>
+         <artifactId>avro</artifactId>
+         <version>${avro.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.avro</groupId>
+         <artifactId>avro-tools</artifactId>
+         <version>${avro.version}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.avro</groupId>
+         <artifactId>avro-maven-plugin</artifactId>
+         <version>${avro.version}</version>
+      </dependency>
+
    </dependencies>
 
    <build>
@@ -24,6 +69,45 @@
          <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
+         </plugin>
+
+         <plugin>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro-maven-plugin</artifactId>
+            <version>${avro.version}</version>
+            <executions>
+               <execution>
+                  <id>schemas</id>
+                  <phase>generate-sources</phase>
+                  <goals>
+                     <goal>schema</goal>
+                     <goal>protocol</goal>
+                     <goal>idl-protocol</goal>
+                  </goals>
+                  <configuration>
+                     <sourceDirectory>${project.basedir}/src/main/resources/</sourceDirectory>
+                     <outputDirectory>${project.build.directory}/generated-sources/cacib</outputDirectory>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                  <phase>generate-sources</phase>
+                  <goals>
+                     <goal>add-source</goal>
+                  </goals>
+                  <configuration>
+                     <sources>
+                        <source>${project.build.directory}/generated-sources/cacib</source>
+                     </sources>
+                  </configuration>
+               </execution>
+            </executions>
          </plugin>
 
          <plugin>
