--- a/vyne-query-service/src/main/web/angular.json
+++ b/vyne-query-service/src/main/web/angular.json
@@ -27,6 +27,7 @@
               "src/favicon-32x32.png",
               "src/favicon-16x16.png",
               "src/assets",
+              "node_modules/marked/lib/marked.js",
               { "glob": "**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco-editor/" }
             ],
             "styles": [
