--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -20,8 +20,9 @@ spring:
       user: ${spring.datasource.username}
       password: ${spring.datasource.password}
       enabled: true
-
       locations: classpath:db/migration
+   codec:
+      max-in-memory-size: 100MB
 
 eureka:
    uri: http://127.0.0.1:9022
