--- a/file-schema-server/pom.xml
+++ b/file-schema-server/pom.xml
@@ -62,7 +62,10 @@
          <artifactId>commons-io</artifactId>
          <version>2.8.0</version>
       </dependency>
-
+      <dependency>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-core</artifactId>
+      </dependency>
       <dependency>
          <groupId>com.nhaarman.mockitokotlin2</groupId>
          <artifactId>mockito-kotlin</artifactId>
