--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -25,6 +25,10 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
+       <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-websocket</artifactId>
+       </dependency>
 
        <dependency>
           <groupId>org.springframework.cloud</groupId>
