--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -32,7 +32,6 @@
     "@covalent/core": "^2.0.1",
     "@covalent/dynamic-forms": "^2.0.1",
     "@covalent/highlight": "^2.1.1",
-    "ngx-monaco-editor": "^8.1.1",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@ng-select/ng-select": "^3.7.3",
     "@stomp/ng2-stompjs": "^7.2.0",
@@ -51,8 +50,8 @@
     "install": "^0.13.0",
     "mermaid": "^8.0.0-rc.8",
     "moment": "^2.24.0",
-    "monaco-editor": "^0.18.1",
-    "monaco-languageclient": "^0.10.2",
+    "monaco-editor": "^0.22.3",
+    "monaco-languageclient": "^0.13.0",
     "ngx-file-drop": "^6.0.1",
     "ngx-highlightjs": "^4.0.0",
     "ngx-markdown": "^8.2.2",
@@ -67,7 +66,7 @@
     "stream": "0.0.2",
     "tslib": "^1.9.0",
     "url-parse": "^1.4.4",
-    "vscode-ws-jsonrpc": "^0.1.1",
+    "vscode-ws-jsonrpc": "^0.2.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
@@ -88,6 +87,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-select": "^3.0.10",
+    "@codingame/monaco-jsonrpc": "^0.3.1",
     "babel-loader": "^8.0.6",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
