--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -51,6 +51,7 @@
     "mermaid": "^8.0.0-rc.8",
     "moment": "^2.24.0",
     "monaco-editor": "^0.15.6",
+    "nanoid": "^3.1.22",
     "ngx-file-drop": "^6.0.1",
     "ngx-highlightjs": "^4.0.0",
     "ngx-markdown": "^8.2.2",
