--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -168,6 +168,7 @@
          <groupId>app.cash.turbine</groupId>
          <artifactId>turbine-jvm</artifactId>
          <version>0.4.1</version>
+         <scope>test</scope>
       </dependency>
 
    </dependencies>
