--- a/pom.xml
+++ b/pom.xml
@@ -341,6 +341,13 @@
             <version>0.4.1</version>
          </dependency>
          <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>chronicle-bom</artifactId>
+            <version>1.16.215</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers-bom</artifactId>
             <version>1.16.2</version>
