--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -25,6 +25,14 @@
          <artifactId>schema-server-api</artifactId>
          <version>${project.version}</version>
       </dependency>
+
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>schema-server</artifactId>
+         <version>${project.version}</version>
+         <scope>test</scope>
+      </dependency>
+
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-history-core</artifactId>
@@ -108,6 +116,11 @@
       <dependency>
          <groupId>org.taxilang</groupId>
          <artifactId>swagger2taxi</artifactId>
+         <version>${taxi.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.taxilang</groupId>
+         <artifactId>jsonSchema-to-taxi</artifactId>
          <version>${taxi.version}</version>
       </dependency>
       <dependency>
