--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
       <logstash.logback.version>6.4</logstash.logback.version>
       <swagger.springfox.version>2.9.2</swagger.springfox.version>
       <http4k.version>4.9.8.0</http4k.version>
+      <h2.version>2.0.206</h2.version>
    </properties>
 
    <modules>
@@ -330,7 +331,11 @@
             <artifactId>turbine-jvm</artifactId>
             <version>0.4.1</version>
          </dependency>
-
+         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+         </dependency>
       </dependencies>
    </dependencyManagement>
 
