--- a/vyne-query-service/src/test/resources/application-test.yml
+++ b/vyne-query-service/src/test/resources/application-test.yml
@@ -4,7 +4,7 @@ spring:
       ddl-auto: create
 
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;CASE_INSENSITIVE_IDENTIFIERS=TRUE;MODE=LEGACY
     username: sa
     password:
     driverClassName: org.h2.Driver
