--- a/cask-api/pom.xml
+++ b/cask-api/pom.xml
@@ -66,5 +66,10 @@
           <artifactId>feign-reactor-spring-configuration</artifactId>
        </dependency>
 
+       <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-core</artifactId>
+       </dependency>
+
     </dependencies>
 </project>
