--- a/vyne-history-core/pom.xml
+++ b/vyne-history-core/pom.xml
@@ -16,6 +16,10 @@
          <artifactId>spring-boot-starter-data-jpa</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.security</groupId>
+         <artifactId>spring-security-core</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.jetbrains.kotlinx</groupId>
          <artifactId>kotlinx-serialization-cbor</artifactId>
       </dependency>
