--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -92,6 +92,17 @@
       </dependency>
       <dependency>
          <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-contract-wiremock</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.bitbucket.b_c</groupId>
+         <artifactId>jose4j</artifactId>
+         <version>0.7.2</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       </dependency>
       <dependency>
