--- a/docs/package.json
+++ b/docs/package.json
@@ -5,13 +5,18 @@
   "version": "0.1.0",
   "author": "Cris Shaki",
   "dependencies": {
-    "gatsby": "^2.26.1",
-    "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-theme-apollo-docs": "^4.6.5",
+    "@types/mdx-js__react": "^1.5.5",
+    "@types/styled-components": "^5.1.21",
+    "@types/tailwindcss": "^3.0.3",
+    "gatsby": "^4.6.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-theme-apollo-docs": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "styled-components": "^5.3.3",
+    "tailwindcss": "^3.0.16",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
