--- a/pipelines/pipeline-jet/pom.xml
+++ b/pipelines/pipeline-jet/pom.xml
@@ -171,6 +171,18 @@
          <version>2.2.12.RELEASE</version>
       </dependency>
 
+      <dependency>
+         <groupId>org.testcontainers</groupId>
+         <artifactId>junit-jupiter</artifactId>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>org.testcontainers</groupId>
+         <artifactId>kafka</artifactId>
+         <scope>test</scope>
+      </dependency>
+
 
       <dependency>
          <groupId>com.hazelcast.jet.contrib</groupId>
