--- a/pipelines/pipeline-runner-core/pom.xml
+++ b/pipelines/pipeline-runner-core/pom.xml
@@ -143,6 +143,18 @@
          <scope>test</scope>
       </dependency>
 
+      <dependency>
+         <groupId>org.testcontainers</groupId>
+         <artifactId>junit-jupiter</artifactId>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>org.testcontainers</groupId>
+         <artifactId>kafka</artifactId>
+         <scope>test</scope>
+      </dependency>
+
    </dependencies>
    <dependencyManagement>
       <dependencies>
