--- a/schema-server/pom.xml
+++ b/schema-server/pom.xml
@@ -93,8 +93,8 @@
          <scope>test</scope>
       </dependency>
       <dependency>
-         <groupId>com.github.tomakehurst</groupId>
-         <artifactId>wiremock-jre8-standalone</artifactId>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-contract-wiremock</artifactId>
          <scope>test</scope>
       </dependency>
    </dependencies>
