--- a/schema-management/schema-rsocket-publisher/pom.xml
+++ b/schema-management/schema-rsocket-publisher/pom.xml
@@ -26,5 +26,10 @@
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-rsocket</artifactId>
       </dependency>
+      <dependency>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-test</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 </project>
